# django-nginx-generator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml
src/generate_nginx/: __init__.py  cli.py
tests/: test_cli.py  test_generate_nginx.py
