[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nginx-generator"
version = "1.0.0"
description = "CLI tool to auto-generate production-grade Nginx configs for Django"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name="Amirreza Jabbari", email="amirrezajabbari79@gmail.com" },
]
dependencies = [
  "click>=8.0",
  "jinja2>=3.0",
  "Django>=3.2",
]
keywords = ["django", "nginx", "cli", "configuration"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]

[project.urls]
"Homepage" = "https://github.com/Amirreza-Jabbari/django-nginx-generator"
"Bug Tracker" = "https://github.com/Amirreza-Jabbari/django-nginx-generator/issues"
